--- a/Adobe PDF and XMind/嘿嘿.md
+++ b/Adobe PDF and XMind/嘿嘿.md
@@ -1,9 +1,9 @@
-# 再次强调！软件仅供个人学习使用，不可用于商业用途！
+# 再次强调！软件仅供个人学习使用，不可用于商业用途！:speak_no_evil:
 
 `Adobe PDF 2020`
 
 链接：[https://pan.baidu.com/s/1U7jVmwSbJfV24PmzT3f5Yw](https://pan.baidu.com/s/1U7jVmwSbJfV24PmzT3f5Yw) 
-提取码：2454 
+提取码：`2454` 
 复制这段内容后打开百度网盘手机App，操作更方便哦
 
 
@@ -11,5 +11,6 @@
 `XMind 20.0.0`
 
 链接：https://pan.baidu.com/s/1pkO-D36CmphBNiJJQHiesg 
-提取码：2454 
+提取码：`2454` 
 复制这段内容后打开百度网盘手机App，操作更方便哦
+
